# rust-grpc-demo

./: Cargo.toml
proto/: store.proto
src/: cli.rs  server.rs
